--- a/frontend/src/Components/signup.css
+++ b/frontend/src/Components/signup.css
@@ -1,16 +1,19 @@
-
+/* 
 
 /* CSS */
 .button-18 {
   align-items: center;
-  background-color: #0A66C2;
+  background-color: #0a66c2;
   border: 0;
   border-radius: 100px;
   box-sizing: border-box;
   color: #ffffff;
   cursor: pointer;
   display: inline-flex;
-  font-family: -apple-system, system-ui, system-ui, "Segoe UI", Roboto, "Helvetica Neue", "Fira Sans", Ubuntu, Oxygen, "Oxygen Sans", Cantarell, "Droid Sans", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Lucida Grande", Helvetica, Arial, sans-serif;
+  font-family: -apple-system, system-ui, system-ui, "Segoe UI", Roboto,
+    "Helvetica Neue", "Fira Sans", Ubuntu, Oxygen, "Oxygen Sans", Cantarell,
+    "Droid Sans", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
+    "Lucida Grande", Helvetica, Arial, sans-serif;
   font-size: 16px;
   font-weight: 600;
   justify-content: center;
@@ -24,7 +27,9 @@
   padding-right: 20px;
   text-align: center;
   touch-action: manipulation;
-  transition: background-color 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s, box-shadow 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s, color 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s;
+  transition: background-color 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s,
+    box-shadow 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s,
+    color 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s;
   user-select: none;
   -webkit-user-select: none;
   vertical-align: middle;
@@ -32,269 +37,277 @@
 }
 
 .button-18:hover,
-.button-18:focus { 
-  background-color: #16437E;
+.button-18:focus {
+  background-color: #16437e;
   color: #ffffff;
 }
 
 .button-18:active {
   background: #09223b;
-  color: rgb(255, 255, 255, .7);
+  color: rgb(255, 255, 255, 0.7);
 }
 
-.button-18:disabled { 
+.button-18:disabled {
   cursor: not-allowed;
-  background: rgba(0, 0, 0, .08);
-  color: rgba(0, 0, 0, .3);
+  background: rgba(0, 0, 0, 0.08);
+  color: rgba(0, 0, 0, 0.3);
 }
 
 a.forgot {
-    border-style: solid;
-    border-width: medium;
-    padding-right: 10%;
-    padding-left: 10%;
-    padding-top: 2%;
-    padding-bottom: 2%;
-    text-decoration: none;
-    border-radius: 1rem;
-  }
-  
-  #password {
-    padding-bottom: 1rem;
-  }
-  
-  @keyframes pulse512 {
-    0% {
-      box-shadow: 0 0 0 0 #05bada66;
-    }
-    70% {
-      box-shadow: 0 0 0 10px rgb(218 103 68 / 0%);
-    }
-    100% {
-      box-shadow: 0 0 0 0 rgb(218 103 68 / 0%);
-    }
-  }
-  
-  a {
-    text-decoration: none;
-  }
-  
-  .form {
-    background-color: rgb(250, 243, 243);
-    box-shadow: 0 5px 15px rgb(0, 0, 0, 0.35);
-    overflow: hidden;
-    height: 50rem;
-    width: 30rem;
-    margin: 0 auto;
-    border-radius: 10px;
-  }
-  
-  .heading {
-    font-family: 'Inter';
-  }
-  
-  .image {
-    width: 30%;
-    height: 30%;
-    border-radius: 3rem;
-    margin: 0 auto;
-    align-items: center;
-    transform: translateX(-5%);
-  }
-  
-  .signinpage {
-    background-color: rgb(238, 232, 232, 100%);
-  }
-  
-  
-  
-  label {
-    display: block;
-    margin-bottom: 10px;
-    font-weight: bold;
-    color: rgb(22, 15, 15);
-  }
-  
-  .input-container {
-    display: flex;
-    align-items: center;
-  }
-  
-  input[type='text'],
-  input[type='password'],
-  input[type='number'],
-  input[type='email'],
-  select,
-  input[type='date'],
-  textarea {
-    flex: 1;
-    padding: 12px;
-    margin-bottom: 15px;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    box-sizing: border-box;
-    background-color: #fff;
-    color: #161212;
-    transition: border-color 0.3s ease;
-  }
-  
-  input[type='text']:focus,
-  input[type='password']:focus,
-  input[type='number']:focus,
-  input[type='email']:focus,
-  select:focus,
-  input[type='date']:focus,
-  textarea:focus {
-    border-color: #007bff;
-  }
-  
-  .button-container {
-    text-align: center;
-  }
-  
-  button[type='submit'] {
-    padding: 12px 20px;
-    background-color: #ffffff;
-    color: #fff;
-    border: none;
-    border-radius: 8px;
-    cursor: pointer;
-    font-size: 16px;
-    transition: background-color 0.3s ease;
-  }
-  
-  button[type='submit']:hover {
-    background-color: #0056b3;
-  }
-  
-  a.forgot {
-    display: block;
-    margin: auto;
-    width: fit-content;
-    padding: 2% 10%;
-    border: solid;
-    border-width: medium;
-    border-radius: 1rem;
-    text-align: center;
-    text-decoration: none;
-    margin-bottom: 20px;
-  }
-  
-  .separator-container {
-    text-align: center;
-    margin-bottom: 20px;
-  }
-  
-  .separator-container span {
-    display: inline-block;
-    padding: 0 10px;
-    margin-top: 10px;
-    color: #333;
-  }
-  
-  .signin-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .signin-container p {
-    margin-right: 5px;
-  }
-  
-  .signin-container a {
-    text-decoration: none;
-    color: #ff7700;
-  }
-  
-  .signup-container {
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    background-color: #eee8e8;
-    padding-top: 20px;
-  }
-  
-  .form-container {
-    flex: 1;
-    padding: 20px;
-    max-width: 600px; /* Increased max-width to accommodate two fields in one row */
-  }
-  
-  .row {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 15px;
-  }
-  
-  .column {
-    flex: 1;
-    margin-right: 10px;
-  }
-  
-  input[type='checkbox'] {
-    margin-top: 5px;
-  }
-  
-  label {
-    display: block;
-    margin-bottom: 5px;
-    font-weight: bold;
-    color: rgb(22, 15, 15);
-  }
-  
-  input[type='text'],
-  input[type='password'],
-  input[type='number'],
-  input[type='email'],
-  select,
-  input[type='date'],
-  textarea {
-    width: 80%; /* Adjusted width for two fields in one row */
-  }
-  
-  button[type='submit'] {
-    padding: 12px 20px;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 8px;
-    cursor: pointer;
-    font-size: 16px;
-    transition: background-color 0.3s ease;
-  }
-  
-  .signin-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 15px;
-  }
-  
-  .signin-container p {
-    margin-right: 5px;
-  }
-  
-  .signin-container a {
-    text-decoration: none;
-    color: #ee0e0e;
-  }
-  
-  a.forgot {
-    text-decoration: none;
-    color: #1511d5;
-    float: right;
-    margin-bottom: 20px; /* Add margin for spacing */
-  }
-  
-  .input-wrapper{
-    height: 50rem;
-  }
-  #address{
-    width: 90%;
-  }
-  .message1{
-    font-size: 90%;
-  }
+  border-style: solid;
+  border-width: medium;
+  padding-right: 10%;
+  padding-left: 10%;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  text-decoration: none;
+  border-radius: 1rem;
+}
 
-  
+#password {
+  padding-bottom: 1rem;
+}
+
+@keyframes pulse512 {
+  0% {
+    box-shadow: 0 0 0 0 #05bada66;
+  }
+  70% {
+    box-shadow: 0 0 0 10px rgb(218 103 68 / 0%);
+  }
+  100% {
+    box-shadow: 0 0 0 0 rgb(218 103 68 / 0%);
+  }
+}
+
+a {
+  text-decoration: none;
+}
+
+.form {
+  background-color: rgb(250, 243, 243);
+  box-shadow: 0 5px 15px rgb(0, 0, 0, 0.35);
+  overflow: hidden;
+  height: 50rem;
+  width: 30rem;
+  margin: 0 auto;
+  border-radius: 10px;
+}
+
+.heading {
+  font-family: "Inter";
+}
+
+.image {
+  width: 30%;
+  height: 30%;
+  border-radius: 3rem;
+  margin: 0 auto;
+  align-items: center;
+  transform: translateX(-5%);
+}
+
+.signinpage {
+  background-color: rgb(238, 232, 232, 100%);
+}
+
+label {
+  display: block;
+  margin-bottom: 10px;
+  font-weight: bold;
+  color: rgb(22, 15, 15);
+}
+
+.input-container {
+  display: flex;
+  align-items: center;
+}
+
+input[type="text"],
+input[type="password"],
+input[type="number"],
+input[type="email"],
+select,
+input[type="date"],
+textarea {
+  flex: 1;
+  padding: 12px;
+  margin-bottom: 15px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  box-sizing: border-box;
+  background-color: #fff;
+  color: #161212;
+  transition: border-color 0.3s ease;
+}
+
+input[type="text"]:focus,
+input[type="password"]:focus,
+input[type="number"]:focus,
+input[type="email"]:focus,
+select:focus,
+input[type="date"]:focus,
+textarea:focus {
+  border-color: #007bff;
+}
+
+.button-container {
+  text-align: center;
+}
+
+button[type="submit"] {
+  padding: 12px 20px;
+  background-color: #ffffff;
+  color: #fff;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  font-size: 16px;
+  transition: background-color 0.3s ease;
+}
+
+button[type="submit"]:hover {
+  background-color: #0056b3;
+}
+
+a.forgot {
+  display: block;
+  margin: auto;
+  width: fit-content;
+  padding: 2% 10%;
+  border: solid;
+  border-width: medium;
+  border-radius: 1rem;
+  text-align: center;
+  text-decoration: none;
+  margin-bottom: 20px;
+}
+
+.separator-container {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.separator-container span {
+  display: inline-block;
+  padding: 0 10px;
+  margin-top: 10px;
+  color: #333;
+}
+
+.signin-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.signin-container p {
+  margin-right: 5px;
+}
+
+.signin-container a {
+  text-decoration: none;
+  color: #ff7700;
+}
+
+.signup-container {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  background-color: #eee8e8;
+  padding-top: 20px;
+}
+
+.form-container {
+  flex: 1;
+  padding: 20px;
+  max-width: 600px; /* Increased max-width to accommodate two fields in one row */
+}
+
+.row {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 15px;
+}
+
+.column {
+  flex: 1;
+  margin-right: 10px;
+}
+
+input[type="checkbox"] {
+  margin-top: 5px;
+}
+
+label {
+  display: block;
+  margin-bottom: 5px;
+  font-weight: bold;
+  color: rgb(22, 15, 15);
+}
+
+input[type="text"],
+input[type="password"],
+input[type="number"],
+input[type="email"],
+select,
+input[type="date"],
+textarea {
+  width: 80%; /* Adjusted width for two fields in one row */
+}
+
+button[type="submit"] {
+  padding: 12px 20px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  font-size: 16px;
+  transition: background-color 0.3s ease;
+}
+
+.signin-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 15px;
+}
+
+.signin-container p {
+  margin-right: 5px;
+}
+
+.signin-container a {
+  text-decoration: none;
+  color: #ee0e0e;
+}
+
+a.forgot {
+  text-decoration: none;
+  color: #1511d5;
+  float: right;
+  margin-bottom: 20px; /* Add margin for spacing */
+}
+
+.input-wrapper {
+  height: 50rem;
+}
+#address {
+  width: 90%;
+}
+.message1 {
+  font-size: 90%;
+}
+
+*/
+ .signuppage {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.image img {
+  padding-top: 60px;
+  transform: translateX(32%) translateY(-32%);
+  width: 90%;
+}
